fixed the z-index issue for the navbar

--- a/frontend/src/sass/components/_cart.scss
+++ b/frontend/src/sass/components/_cart.scss
@@ -9,7 +9,6 @@
   right: 0;
   width: 100%;
   height: 100vh;
-  z-index: 1000;
   transform: translateX(60.25rem);
   transition: transform 0.5s cubic-bezier(0.35, 0.82, 0.8, 1);
   z-index: 100;
